@startuml

title __ECOMMERCE's Class Diagram__\n

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.AbstractActivity {
        + api()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.HomeActivity {
        - mAdpater : PagerAdapter
        - mTabs : List<View>
        - mViewpager : ViewPager
        - myshopImg : ImageButton
        - myshopList : ListView
        - productList : ListView
        - searchView : SearchView
        - shopImg : ImageButton
        - usrImg : ImageButton
        + onClick()
        # onCreate()
        - initDatas()
        - initEvents()
        - initViews()
        - resetImgs()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.MainActivity {
        - imageView : ImageView
        - log : Button
        - password : EditText
        - register : Button
        - urlpath : String
        - username : EditText
        # onCreate()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.MainActivity.MyAsyncTask {
        # doInBackground()
        # onPostExecute()
        # onPreExecute()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.MainApplication {
        + getApiClient()
        + onCreate()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.ProductDetails {
        # onCreate()
    }
  }
  

  namespace com.taodongdong.ecommerce {
    class com.taodongdong.ecommerce.RegisterPage {
        ~ asSaler : RadioButton
        ~ check : boolean
        ~ password : EditText
        ~ password_cfm : EditText
        ~ username : EditText
        - cancel : Button
        - register : Button
        + onClick()
        # onCreate()
    }
  }
  

  com.taodongdong.ecommerce.AbstractActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.taodongdong.ecommerce.HomeActivity .up.|> android.view.View.OnClickListener
  com.taodongdong.ecommerce.HomeActivity -up-|> com.taodongdong.ecommerce.AbstractActivity
  com.taodongdong.ecommerce.HomeActivity o-- com.taodongdong.ecommerce.prouctlistview.ProductListAdapter : myshopAdapter
  com.taodongdong.ecommerce.HomeActivity o-- com.taodongdong.ecommerce.prouctlistview.ProductListAdapter : plAdapter
  com.taodongdong.ecommerce.MainActivity -up-|> com.taodongdong.ecommerce.AbstractActivity
  com.taodongdong.ecommerce.MainActivity o-- com.taodongdong.ecommerce.MainActivity.MyAsyncTask : mat
  com.taodongdong.ecommerce.MainActivity +-down- com.taodongdong.ecommerce.MainActivity.MyAsyncTask
  com.taodongdong.ecommerce.MainActivity.MyAsyncTask -up-|> android.os.AsyncTask
  com.taodongdong.ecommerce.MainApplication -up-|> android.app.Application
  com.taodongdong.ecommerce.MainApplication o-- com.taodongdong.ecommerce.api.ApiClient : apiClient
  com.taodongdong.ecommerce.ProductDetails -up-|> androidx.appcompat.app.AppCompatActivity
  com.taodongdong.ecommerce.RegisterPage .up.|> android.view.View.OnClickListener
  com.taodongdong.ecommerce.RegisterPage -up-|> com.taodongdong.ecommerce.AbstractActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
